--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+  <!-- ads-by-bysite -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3670269254355588"
+    crossorigin="anonymous"></script>
+
+  <!-- ads tag -->
+  <meta name="google-adsense-account" content="ca-pub-3670269254355588">
+
+  <!-- script for adsence review -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3670269254355588"
     crossorigin="anonymous"></script>
   <meta charset="utf-8" />
